--- a/abstrak/abstrak-id.tex
+++ b/abstrak/abstrak-id.tex
@@ -27,12 +27,21 @@
 \textbf{Abstrak}
 
 % Ubah paragraf berikut dengan abstrak dari tugas akhir
-Sumber daya komputasi tidak selalu digunakan.
-Sumber daya komputasi terkadang berada pada posisi
-\emph{idle} dan dapat sewaktu-waktu digunakan kembali.
-
-% Pada penelitian ini kami mengajukan sistem \emph{provisioning}
-% \emph{virtual cluster} yang dapat diciptakan sewaktu-waktu.
+Sumber daya komputasi seperti komputer tidak selalu berada
+pada posisi digunakan atau berada pada posisi \emph{idle}.
+Untuk menghindari pemborosan sumber daya komputasi tersebut,
+dibutuhkan mekanisme untuk menyewakan sumber daya yang \emph{idle}
+ke pengguna yang membutuhkan. Salah satu \emph{tool} yang
+dapat digunakan adalah Kubernetes. Namun, penggunaan Kubernetes
+pada skala besar membutuhkan sumber daya yang \emph{fix}. Pada
+penelitian kali ini, kami mengajukan sistem \emph{provisioning}
+klaster Kubernetes dalam bentuk \emph{virtual cluster}. \emph{Virtual cluster}
+merupakan pendekatan yang memungkinkan sumber daya komputasi disediakan secara
+\emph{on-demand}. Selain itu, \emph{multi-tenancy} juga akan diimplementasikan
+agar bisa digunakan oleh banyak pengguna. Hasil dari penelitian ini
+adalah sistem \emph{provisioning virtual cluster} dapat digunakan sebagai
+sumber daya komputasi tambahan untuk penggunanya. Selain itu, komputer fisik
+untuk \emph{provisioning} dapat melayani lebih dari satu \emph{virtual cluster}
 
 \vspace{2ex}
 % Ubah kata-kata berikut dengan kata kunci dari tugas akhir
