--- a/bab/1-pendahuluan.tex
+++ b/bab/1-pendahuluan.tex
@@ -24,9 +24,12 @@ cara yang dapat digunakan adalah menggunakan mekanisme \emph{provisioning}
 agar komputer yang berada pada kondisi \emph{idle} dapat dipakai oleh
 pengguna. Namun, komputer tersebut dapat saja digunakan oleh pengguna lainnya.
 
-Salah satu \emph{tools} yang dipakai untuk proses \emph{provisioning} adalah
+Salah satu \emph{tool} yang dipakai untuk proses \emph{provisioning} adalah
 Kubernetes. Kubernetes merupakan sebuah platform sumber terbuka untuk mengatur
-layanan dan beban kerja yang dikemas (\emph{containerized}). Kubernetes akan
+layanan dan beban kerja yang dikemas (\emph{containerized}). Fitur-fitur
+yang dimiliki oleh Kubernetes seperti \emph{self-healing} serta \emph{rollouts}
+dan \emph{rollbacks} secara otomatis menjadikan Kubernetes \emph{tool} standar
+yang paling banyak digunakan pada mekanisme \emph{provisioning}. Kubernetes akan
 membentuk sebuah klaster yang terdiri dari satu atau lebih \emph{nodes} atau
 komputer yang saling bekerja sama dalam menjalankan layanan atau beban kerja
 yang diberikan kepada klaster tersebut. Penggunaan Kubernetes pada skala besar
