--- a/abstrak/abstrak-en.tex
+++ b/abstrak/abstrak-en.tex
@@ -27,11 +27,19 @@
 \textbf{Abstract}
 
 % Ubah paragraf berikut dengan abstrak dari tugas akhir dalam Bahasa Inggris
-
-
-% In this research, we proposed \lipsum[1]
+Computing resources such as computers are not always in use or in idle
+position. This can lead to computing resources waste. To prevent that,
+a mechanism is needed to utilize these resources  by renting out the
+idle resources to users in need. One of the tools that can be used is Kubernetes.
+However, using Kubernetes usually requires fix amount of resources. In this study,
+we propose a Kubernetes provisioning system in the form of virtual cluster. Virtual
+cluster is an approach that allows computing resources to be provided on-demand. In
+addition, multi-tenancy will also be implemented so that computing resources that are
+rented can be used by more than one user. The result of this study is that the virtual
+cluster provisioning system can be used as additional computing resources for its users
+on-demand. In addition, user also shares borrowed computing resources with other users.
 
 \vspace{2ex}
 % Ubah kata-kata berikut dengan kata kunci dari tugas akhir dalam Bahasa Inggris
 \noindent
-\textbf{Keywords: \emph{Multi-Tenancy}, \emph{Virtual Machine}, Kubernetes, \emph{Virtual Cluster}.}
+\textbf{Keywords \emph{Multi-Tenancy}, \emph{Virtual Machine}, Kubernetes, \emph{Virtual Cluster}.}
