--- a/abstrak/abstrak-en.tex
+++ b/abstrak/abstrak-en.tex
@@ -42,4 +42,4 @@ on-demand. In addition, user also shares borrowed computing resources with other
 \vspace{2ex}
 % Ubah kata-kata berikut dengan kata kunci dari tugas akhir dalam Bahasa Inggris
 \noindent
-\textbf{Keywords \emph{Multi-Tenancy}, \emph{Virtual Machine}, Kubernetes, \emph{Virtual Cluster}.}
+\textbf{Keywords: Kubernetes, Multi-Tenancy, Virtual Cluster, Virtual Machine.}
