--- a/abstrak/abstrak-en.tex
+++ b/abstrak/abstrak-en.tex
@@ -37,7 +37,7 @@ cluster is an approach that allows computing resources to be provided on-demand.
 addition, multi-tenancy will also be implemented so that computing resources that are
 rented can be used by more than one user. The result of this study is that the virtual
 cluster provisioning system can be used as additional computing resources for its users
-on-demand. In addition, user also shares borrowed computing resources with other users.
+on-demand. In addition, user also shares computing resources with other users.
 
 \vspace{2ex}
 % Ubah kata-kata berikut dengan kata kunci dari tugas akhir dalam Bahasa Inggris
