--- a/abstrak/abstrak-id.tex
+++ b/abstrak/abstrak-id.tex
@@ -43,8 +43,7 @@ agar sumber daya komputasi yang disewakan sebagai tempat \emph{provisioning} dap
 oleh lebih dari satu pengguna. Hasil dari penelitian ini
 adalah sistem \emph{provisioning virtual cluster} dapat digunakan sebagai
 sumber daya komputasi tambahan untuk penggunanya secara \emph{on-demand}. Selain itu,
-\emph{user} juga berbagi sumber daya komputasi yang dipinjam dengan
-\emph{user} lainnya.
+\emph{user} juga berbagi sumber daya komputasi dengan \emph{user} lainnya.
 
 \vspace{2ex}
 % Ubah kata-kata berikut dengan kata kunci dari tugas akhir
