--- a/bab/2-tinjauan-pustaka.tex
+++ b/bab/2-tinjauan-pustaka.tex
@@ -474,7 +474,7 @@ lebih dari satu \emph{virtual machine} dalam waktu yang bersamaan.
 
 \emph{Multi-tenancy} secara bahasa memiliki arti banyak pengguna atau \emph{tenant}. Dalam konteks
 \emph{cloud computing}, \emph{multi tenancy} memiliki definisi pembagian \emph{resource} 
-untuk setiap pengguna namun definisi tersebut masih bersifat luas karena implementasi
+untuk setiap pengguna. Namun, definisi tersebut masih bersifat luas karena implementasi
 dari \emph{multi-tenancy} berbeda untuk setiap \emph{service models} \parencite{6830928}.
 
 Pada \emph{service model} yang berupa \emph{Software-as-a-Service} (SaaS), aplikasi
