--- a/bab/5-penutup.tex
+++ b/bab/5-penutup.tex
@@ -51,4 +51,7 @@ untuk membuat klaster Kubernetes adalah sebagai berikut:
     agar tidak dapat diakses oleh \emph{virtual machine} lain yang tidak
     dalam satu klaster.
 
+  \item Mengutilisasi GPU dalam pembuatan \emph{virtual machine} sehingga
+    GPU dapat digunakan sebagai salah satu sumber daya pada \emph{virtual cluster}.
+
 \end{enumerate}
